# Evo_Flex_Quadruped_Code

./: README.md
Analysis/: __init__.py  analysis_testing.py  com_evaluation.py  moi_analysis.py  utilities.py
Analysis/R_Scripts/: moi_com_data_plotting.R
Controllers/: __init__.py
Controllers/ANN/: CMakeCache.txt  CMakeLists.txt  Makefile  __init__.py  cmake_install.cmake
Controllers/ANN/logging/: ANN_logging.py  __init__.py
Controllers/ANN/neat_python/: __init__.py  config.py  genome.py  population.py  species.py
Controllers/ANN/nsga_python/: __init__.py  nsga_config.py  nsga_genome.py  nsga_population.py
Controllers/ANN/python/: Makefile  Progess.txt  __init__.py  ann_test_cases.py  ann_wrap.py  ann_wrap_2.py  cffi_code.py  cffi_test.py  cmake_install.cmake  evolution_or_test.py
Controllers/ANN/src/: CMakeLists.txt  Makefile  ann.cpp  ann.h  cmake_install.cmake
Controllers/ANN/tests/: Makefile  cmake_install.cmake
Controllers/MultiNEAT/: __init__.py  setup.py  test.out
Controllers/MultiNEAT/examples/: DefaultConfig.NEAT.NoComments  TestNEAT_xor.py  ball_keeper.py  zero_test.py
Controllers/MultiNEAT/lib/: Genome.cpp  Genome.h  Innovation.cpp  NeuralNetwork.cpp  (+8 more)
Experiments/Evo_Flex_Quadruped/: evo_flex_quadruped.py  evo_flex_quadruped_evol_utils.py  evo_flex_quadruped_genome_testing.py  evo_flex_quadruped_simulation.py  flex_quadruped_utils.py  run_genome_collection_validation.py
ODESystem/: __init__.py  manager.py  placement.py  terrain.py  vector_ops.py
Robot/: __init__.py  sensor.py  sensor_composition.py  temp_signal.py  test_signal.py
(+2 files in other folders)
